# BromEngine

./: App.cpp  CMakeLists.txt  CMakePresets.json  find_all_sorces.ps1  format.ps1  main.cpp  soures.txt  tutorialImpl.h  vcpkg.json
Vulkan/: CommandManager.cpp  CommandManager.h  FrameBuffer.cpp  FrameBuffer.h  FrameManager.h  GraphicsPipeline.cpp  GraphicsPipeline.h  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  Queue.h  SwapChain.h  Window.cpp  Window.h
Vulkan/Geometry/: Vertex.h
Vulkan/Renderer/: CommandBuffer.cpp  CommandBuffer.h  CommandBufferInitInfo.h  CommandManager.cpp  CommandManager.h  CommandPool.cpp  CommandPool.h  DrawCommand.cpp  DrawCommand.h  FrameBuffer.cpp  FrameBuffer.h  FrameManager.cpp  FrameManager.h  GraphicsPipeline.cpp  GraphicsPipeline.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  UniformBufferObject.h  VertexBuffer.cpp  VertexBuffer.h
Vulkan/Renderer/Buffers/: AbstractBuffer.cpp  AbstractBuffer.h  DeviceIndexBuffer.h  DeviceInternalBuffer.cpp  DeviceInternalBuffer.h  DeviceVertexBuffer.cpp  DeviceVertexBuffer.h  StagingBuffer.cpp  StagingBuffer.h
Vulkan/Renderer/Commands/: BindCommandBufferToPipelineCommand.cpp  BindCommandBufferToPipelineCommand.h  CopyBufferCommand.cpp  CopyBufferCommand.h  DrawCommand.cpp  DrawCommand.h  DrawIndexedCommand.cpp  DrawIndexedCommand.h  ICommand.h  SetupViewportScissorCommand.cpp  SetupViewportScissorCommand.h  StartRenderPassCommand.cpp  StartRenderPassCommand.h  StopRenderPassCommand.cpp  StopRenderPassCommand.h
src/: App.cpp  App.h  Window.cpp  Window.h  main.cpp  tutorial.cpp
src/Game/: Camera.h  Model3d.h  Scene.cpp  Scene.h
src/Game/Geometry/: SpaceSettings.h  Vertex.h
src/Logger/: ILogger.h  Logger.cpp  Logger.h
src/Shaders/: shader.vert
src/Vulkan/: Debug.cpp  Debug.h  Instance.cpp  Instance.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  PhysicalDeviceQueueFamilyIndexInfo.h  Queue.cpp  Queue.h  Surface.cpp  Surface.h  SwapChainSupportDetails.h  VulkanApi.cpp  VulkanApi.h  Window.cpp  Window.h
src/Vulkan/Geometry/: Vertex.h
src/Vulkan/Renderer/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  DescriptorManager.cpp  DescriptorManager.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Frame.cpp  Frame.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  UniformBufferObject.h  VertexUtility.h  Vulkan3dModelWrapper.cpp  Vulkan3dModelWrapper.h
src/Vulkan/Renderer/Buffers/: AbstractBuffer.cpp  AbstractBuffer.h  BasicBuffer.cpp  BasicBuffer.h  DeviceInternalBuffer.cpp  DeviceInternalBuffer.h  IBuffer.h  IndexBuffer.cpp  IndexBuffer.h  StagingBuffer.cpp  StagingBuffer.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp  VertexBuffer.h
src/Vulkan/Renderer/Commands/: BindCommandBufferToPipelineCommand.cpp  BindCommandBufferToPipelineCommand.h  BindDescriptorSetCommand.cpp  BindDescriptorSetCommand.h  CommandBuffer.h  CommandPool.h  CopyBufferCommand.cpp  CopyBufferCommand.h  DrawCommand.cpp  DrawCommand.h  DrawIndexedCommand.h  ICommand.h  SetupViewportScissorCommand.cpp  SetupViewportScissorCommand.h  StartRenderPassCommand.cpp  StartRenderPassCommand.h  StopRenderPassCommand.cpp  StopRenderPassCommand.h
src/Vulkan/Renderer/Descriptors/: DescriptorManager.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DescriptorsData.h
